--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <com.samluys.uibutton.UIButton
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="Hello World!"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
+        app:ui_cornerRadius="20dp"
+        app:ui_solidColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
